2009-01-02  Robin Sonefors <ozamosi@flukkost.nu>

	* First version