@@ -1,18 +1,49 @@
 #include "river-config.h"
+#include "river-xmpp.h"
+
 #include <libsummer/summer.h>
-#include <loudmouth/loudmouth.h>
 #include <glib.h>
+#include <glib/gprintf.h>
 #include <stdlib.h>
+#include <unistd.h>
+#include <sys/stat.h>
 
 static GMainLoop *loop;
 
-static gboolean daemon = FALSE;
-static gint verbosity = 0;
+static gboolean daemonize;
+static gchar *server;
+static gchar *username;
+static gchar *jid;
+static gchar *password;
+static gchar *recipient;
+static gboolean ssl;
+static gint port;
 
 static GOptionEntry entries[] = {
-	{"daemon", 'd', 0, G_OPTION_ARG_NONE, &daemon, "Run as a daemon", NULL},
-	{"verbosity", 'v', 0, G_OPTION_ARG_INT, &verbosity, "Use verbosity level N. 0 is quiet, higher numbers means more talk.", "N"},
+	{"daemon", 'd', 0, G_OPTION_ARG_NONE, &daemonize, "Run as a daemon", NULL},
+	{"server", 's', 0, G_OPTION_ARG_STRING, &server, "Server to connect to", NULL},
+	{"username", 'u', 0, G_OPTION_ARG_STRING, &username, "River's username", NULL},
+	{"jid", 'j', 0, G_OPTION_ARG_STRING, &jid, "River's JabberID (usually username@server)", NULL},
+	{"password", 'p', 0, G_OPTION_ARG_STRING, &password, "River's XMPP password", NULL},
+	{"recipient", 'r', 0, G_OPTION_ARG_STRING, &recipient, "The recipient of any notifications", NULL},
+	{"ssl", 'l', 0, G_OPTION_ARG_NONE, &ssl, "Whether to use SSL when connecting", NULL},
+	{"port", 'o', 0, G_OPTION_ARG_INT, &port, "Port to connect to", NULL},
 	{NULL}};
+
+static void
+signal_handler (int signum)
+{
+	river_xmpp_destruct ();
+	exit (0);
+}
+
+static void
+on_download_complete (SummerDownload *dl, gchar *save_path, gconstpointer user_data)
+{
+	gchar *message = g_strdup_printf ("Saved to '%s'", save_path);
+	river_xmpp_send ("Download complete", message);
+	g_free (message);
+}
 
 static void
 on_new_entries (SummerFeed *feed, gconstpointer user_data)
@@ -53,9 +84,13 @@ on_new_entries (SummerFeed *feed, gconstpointer user_data)
 				NULL);
 		g_object_set (dl, "save-dir", save_dir, NULL);
 		g_free (save_dir);
-		g_print ("New download starting: \"%s\" from %s\n", 
-			item->title, 
-			subscription->name);
+		gchar *subject = g_strdup_printf ("New download starting from %s", subscription->name);
+		gchar *message = g_strdup_printf ("%s: %s", 
+			subscription->name, item->title);
+		river_xmpp_send (subject, message);
+		g_free (message);
+		g_free (subject);
+		g_signal_connect (dl, "download-complete", G_CALLBACK (on_download_complete), NULL);
 		summer_download_start (dl);
 	}
 }
@@ -63,6 +98,11 @@ on_new_entries (SummerFeed *feed, gconstpointer user_data)
 int
 main (int argc, char *argv[])
 {
+	signal(SIGHUP, signal_handler);
+    signal(SIGTERM, signal_handler);
+    signal(SIGINT, signal_handler);
+    signal(SIGQUIT, signal_handler);
+	
 	g_type_init ();
 	g_thread_init (NULL);
 	GError *error = NULL;
@@ -76,6 +116,7 @@ main (int argc, char *argv[])
 	loop = g_main_loop_new (NULL, TRUE);
 
 	RiverConfig *config = river_load_config ();
+	river_xmpp_init (server, username, jid, password, recipient, ssl, port);
 	if (config == NULL)
 		g_error ("Couldn't parse config file");
 	summer_set ("download",
@@ -96,6 +137,32 @@ main (int argc, char *argv[])
 		summer_feed_start (feed, 
 			((RiverSubscription *)subscriptions->data)->url);
 	}
+	if (daemonize) {
+		pid_t pid = fork ();
+		if (pid < 0)
+			exit (1);
+		else if (pid > 0)
+			exit (0);
+		
+		if (setsid () < 0)
+			exit (1);
+
+		pid = fork ();
+		if (pid < 0)
+			exit (1);
+		else if (pid > 0)
+			exit (0);
+
+		if (chdir ("/") < 0)
+			exit (1);
+		
+		umask (0);
+
+		close (0);
+		close (1);
+		close (2);
+	}
+
 	g_main_loop_run (loop);
 	g_main_loop_unref (loop);
 	return 0;
